--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+publishPlugin {
+    username intellijPublishUsername
+    password intellijPublishPassword
+}
+
+
 intellij {
     version '2018.2.6'
 }
