--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'cn.mofada.axml.plugin'
-version '1.7'
+version '1.8'
 
 sourceCompatibility = 1.8
 
@@ -41,5 +41,6 @@ patchPluginXml {
   7. Add Enum mustache grammar<br>
   8. Update plugin using version in idea 2018.3<br>
   9. Fix card onClick attribute<br>
+  10. Remove the validation of the parent/child element<br>
       """
 }
